# automaticReport

./: README.md  pyproject.toml  run_agent.py
src/auto_report_agent/: __init__.py  cli.py  doc_writer.py  models.py  ollama_client.py  prompts.py  repo_analyzer.py
